@@ -3,6 +3,6 @@ package com.mrgabe.guilds.utils;
 public class Utils {
 
     public static boolean isValidString(String s) {
-        return s != null && !s.isEmpty() && !s.isBlank();
+        return s != null && !s.isEmpty() && !s.trim().isEmpty();
     }
 }
